change from lat and long to city search

--- a/Weather App/Weather App/index.html
+++ b/Weather App/Weather App/index.html
@@ -11,22 +11,22 @@
 
 <body>
     <div>
-        <h2>Welcome Enter Longitude and Latitude to get current weather info in your area.</h2>
+        <h2>Welcome Enter a city to get the Weather</h2>
         <h4>Powered by OpenWeather </h4>
     </div>
     <div class="outside-search-container">
         <div class="sch-container">
             <div class="container">
-                <label for="longitude">Longitude:</label>
-                <input type="text" placeholder="Enter Longitude" class="searchBar long" name="longitude" class="bar">
+                <label for="longitude">city:</label>
+                <input type="text" placeholder="Enter a city" class="searchBar long" name="longitude" >
 
             </div>
-            <div class="container">
+            <!-- <div class="container">
            
                 <label  for="Latitude">Latitude:</label>
                  <input type="text" placeholder="Enter Latitude" class="searchBar lat" name="Latitude" class="bar">
              
-                </div>
+                </div> -->
                 <div class="container">
             <button class="search" type="button">Search</button>
                 </div>
